# tijmen_graduation

./: Nemoh.cal  README.md
Plankton/bagfiles/exp1_pid_mpc/: mpc_id_0.csv  mpc_id_1.csv  mpc_id_2.csv  mpc_id_3.csv  mpc_id_4.csv  mpc_id_5.csv  mpc_id_6.csv  mpc_id_7.csv  mpc_pose_gt.csv  pid_id_0.csv  pid_id_1.csv  pid_id_2.csv  pid_id_3.csv  pid_id_4.csv  pid_id_5.csv  pid_id_6.csv  pid_id_7.csv  pid_pose_gt.csv  plot_graphs.py
Plankton/bagfiles/exp2_pid_mpc/: mpc_id_0.csv  mpc_id_1.csv  mpc_id_2.csv  mpc_id_3.csv  mpc_id_4.csv  mpc_id_5.csv  mpc_id_6.csv  mpc_id_7.csv  mpc_pose_gt.csv  pid_id_2.csv  pid_id_5.csv  pid_id_6.csv  pid_id_7.csv  plot_graphs_2.py
Plankton/bagfiles/exp3_pid_mpc/: mpc_id_0.csv  mpc_id_1.csv  mpc_id_2.csv  mpc_id_3.csv  mpc_id_4.csv  mpc_id_5.csv  mpc_id_6.csv  mpc_id_7.csv  mpc_pose_gt.csv  pid_id_0.csv  pid_id_1.csv  pid_id_3.csv  (+3 more)
Plankton/raybot_control/: CMakeLists.txt  TAM.yaml  package.xml
Plankton/raybot_description/: CMakeLists.txt  package.xml
Plankton/uuv_control/uuv_mpc_control/: CMakeLists.txt  package.xml
Plankton/uuv_control/uuv_mpc_control/scripts/: function_file_raybot_v7.py  generate_raybot_solver_v7.py  run_raybot_solver_v7.py
forcespro/: path_tracking_robot_simple_v1.py
forcespro/FORCESNLPsolver/: FORCESNLPsolver_interface.c  FORCESNLPsolver_model.c
forcespro/path_tracking_robot_solver_v2/: path_tracking_robot_simple_v2.py
forcespro/path_tracking_robot_solver_v3/: path_tracking_robot_simple_v3.py  path_tracking_robot_simple_v3_1.py
forcespro/path_tracking_robot_solver_v5/: path_tracking_robot_simple_v5.py
(+71 files in other folders)
