<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>uuv_mpc_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="t.vanenckevort@gmail.com">tijmen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>  
  <exec_depend>plankton_utils</exec_depend> 
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
